fix mobile overflow display bug

--- a/wp-content/themes/core/components/blocks/gallery_slider/css/gallery_slider.pcss
+++ b/wp-content/themes/core/components/blocks/gallery_slider/css/gallery_slider.pcss
@@ -6,6 +6,11 @@
 
 .b-gallery-slider {
 	padding-bottom: var(--spacer-70); /* should blocks have vertical padding? */
+
+	/* CASE: Image Ratio Variable */
+	&.b-gallery-slider--variable {
+		overflow: hidden;
+	}
 }
 
 .b-gallery-slider__header {
